# computer-engineering-robot

./: README.md  compile_commands.json  platformio.ini
ble-app/: Cargo.toml  app.c  app.py  ble_reader  bluetooth.py
ble-app/src/: main.rs
include/: bluetooth.h  bluetooth_commands.h  helpers.h  irsensor.h  motor.h  pid.h  pins.h  servo.h  ultrasonicsensor.h
src/: bluetooth.cpp  bluetooth_commands.cpp  helpers.cpp  irsensor.c  irsensor.cpp  main.c  main.cpp  motor.c  motor.cpp  pid.cpp  servo.cpp  ultrasonic_sensor.cpp
