[package]
name = "ble-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { git="https://github.com/deviceplug/btleplug.git" }
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["tokio-macros", "sync", "rt", "full"] }
